<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string-array name="theme">
        <item>Black</item>
        <item>Blue</item>
        <item>Nord</item>
        <item>Solarized Light</item>
        <item>Arc</item>
    </string-array>
    <string-array name="font">
        <item>Roboto</item>
        <item>Roboto Mono</item>
    </string-array>
</resources>