<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/context_menu"
        android:icon="@drawable/ic_context_menu"
        android:title=""
        app:showAsAction="always">

        <menu>
            <item android:id="@+id/app_settings"
                android:icon="@drawable/ic_settings_24"
                android:title="@string/settings_button" />
            <item android:id="@+id/move_widget"
                android:icon="@drawable/ic_edit_button"
                android:title="@string/move_button" />
        </menu>

    </item>
</menu>